Add fields for Donation Process and update get Donation Process All & By Id
